# skypro_course_work5_DB

./: README.md  pyproject.toml
course_work5/: dbmanager.py  function.py  main.py
